belgrade/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  labels:
    app: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: demo
          image: darkocr.azurecr.io/sample:1.1
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              port: http
              path: /health
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests:
              cpu: 82m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          volumeMounts:
            - name: data
              mountPath: /static
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: demo-rwx
        - name: static
          configMap:
            name: demo-static
