belgrade/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo
  labels:
    app: demo
    training: belgrade
spec:
  containers:
    - name: demo
      image: nginx
      ports:
        - containerPort: 80
          name: http
