belgrade/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-traefik
spec:
  ingressClassName: traefik
  rules:
    - host: "darko.prodyna.wtf"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: demo
                port:
                  name: http
  tls:
    - hosts:
        - darko.prodyna.wtf
      secretName: demo-tls
